--- a/MonthlyStatement/MonthlyStatement.csproj
+++ b/MonthlyStatement/MonthlyStatement.csproj
@@ -194,6 +194,7 @@
     <Compile Include="Areas\Admin\Controllers\FacultyController.cs" />
     <Compile Include="Areas\Admin\Controllers\ProfileController.cs" />
     <Compile Include="Areas\Admin\Controllers\ReportPeriodsController.cs" />
+    <Compile Include="Areas\Admin\Controllers\YearReportController.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Global.asax.cs">
@@ -284,7 +285,6 @@
     <Compile Include="Startup.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Areas\Admin\Views\YearReport\Index.html" />
     <Content Include="assets\bundles\amcharts4\animated.js" />
     <Content Include="assets\bundles\amcharts4\charts.js" />
     <Content Include="assets\bundles\amcharts4\core.js" />
@@ -1153,6 +1153,7 @@
     <Content Include="Models\Model1.edmx.diagram">
       <DependentUpon>Model1.edmx</DependentUpon>
     </Content>
+    <Content Include="Areas\Admin\Views\YearReport\Index.cshtml" />
     <None Include="Properties\PublishProfiles\FTPProfile.pubxml" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.4.1.js" />
