--- a/MonthlyStatement/Web.config
+++ b/MonthlyStatement/Web.config
@@ -111,7 +111,8 @@
   </runtime>
   <connectionStrings>
     <add name="IdentityConnection" connectionString="Data Source=tuleap.vanlanguni.edu.vn,18082;initial catalog=CP25Team04;persist security info=True;user id=CP25Team04;password=CP25Team04;MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
-  <add name="CP25Team04Entities" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=tuleap.vanlanguni.edu.vn,18082;initial catalog=CP25Team04;user id=CP25Team04;password=CP25Team04;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
+    <add name="CP25Team04Entities" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=tuleap.vanlanguni.edu.vn,18082;initial catalog=CP25Team04;user id=CP25Team04;password=CP25Team04;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
