Update Form report personal (FE)

--- a/MonthlyStatement/MonthlyStatement.csproj
+++ b/MonthlyStatement/MonthlyStatement.csproj
@@ -192,6 +192,7 @@
     <Compile Include="Areas\Admin\Controllers\AccountsController.cs" />
     <Compile Include="Areas\Admin\Controllers\CategoriesController.cs" />
     <Compile Include="Areas\Admin\Controllers\FacultyController.cs" />
+    <Compile Include="Areas\Admin\Controllers\PersonalReportFormController.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ProfileController.cs" />
@@ -1157,6 +1158,8 @@
     </Content>
     <Content Include="Areas\Admin\Views\ReportPeriods\FormDepartmentDetail.cshtml" />
     <Content Include="Areas\Admin\Views\ReportPeriods\FormPersonalDetail.cshtml" />
+    <Content Include="Areas\Admin\Views\PersonalReportForm\Index.cshtml" />
+    <Content Include="Areas\Admin\Views\PersonalReportForm\Formreport.cshtml" />
     <None Include="Properties\PublishProfiles\FTPProfile.pubxml" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.4.1.js" />
