--- a/MonthlyStatement/MonthlyStatement.csproj
+++ b/MonthlyStatement/MonthlyStatement.csproj
@@ -34,6 +34,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <PlatformTarget>x64</PlatformTarget>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -193,6 +194,8 @@
     <Compile Include="Areas\Admin\Controllers\CategoriesController.cs" />
     <Compile Include="Areas\Admin\Controllers\FacultyController.cs" />
     <Compile Include="Areas\Admin\Controllers\PersonalReportFormController.cs" />
+    <Compile Include="Areas\Personal\Controllers\FormReportController.cs" />
+    <Compile Include="Areas\Personal\PersonalAreaRegistration.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ProfileController.cs" />
@@ -1128,14 +1131,12 @@
     <Content Include="Areas\Admin\Views\web.config" />
     <Content Include="Areas\Admin\Views\Accounts\Edit.cshtml" />
     <Content Include="Areas\Admin\Views\Accounts\Index.cshtml" />
-    <Content Include="Areas\Admin\Views\ReportPeriods\Create.cshtml" />
     <Content Include="Areas\Admin\Views\ReportPeriods\Edit.cshtml" />
     <Content Include="Areas\Admin\Views\ReportPeriods\Index.cshtml" />
     <Content Include="Areas\Admin\Views\ReportPeriods\FormReports.cshtml" />
     <Content Include="Views\Profile\Index.cshtml" />
     <Content Include="Areas\Admin\Views\Categories\Create.cshtml" />
     <Content Include="Areas\Admin\Views\Categories\Delete.cshtml" />
-    <Content Include="Areas\Admin\Views\Categories\Details.cshtml" />
     <Content Include="Areas\Admin\Views\Categories\Edit.cshtml" />
     <Content Include="Areas\Admin\Views\Categories\Index.cshtml" />
     <Content Include="Areas\Admin\Views\Categories\Create1.cshtml" />
@@ -1157,8 +1158,9 @@
     </Content>
     <Content Include="Areas\Admin\Views\ReportPeriods\FormDepartmentDetail.cshtml" />
     <Content Include="Areas\Admin\Views\ReportPeriods\FormPersonalDetail.cshtml" />
-    <Content Include="Areas\Admin\Views\PersonalReportForm\Index.cshtml" />
-    <Content Include="Areas\Admin\Views\PersonalReportForm\Formreport.cshtml" />
+    <Content Include="Areas\Personal\Views\FormReport\Index.cshtml" />
+    <Content Include="Areas\Personal\Views\FormReport\Formreport.cshtml" />
+    <Content Include="Areas\Personal\Views\web.config" />
     <None Include="Properties\PublishProfiles\FTPProfile.pubxml" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.4.1.js" />
@@ -1190,6 +1192,8 @@
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Areas\Admin\Data\" />
+    <Folder Include="Areas\Personal\Data\" />
+    <Folder Include="Areas\Personal\Views\Shared\" />
     <Folder Include="assets\FileImport\" />
     <Folder Include="assets\user\avatar\" />
     <Folder Include="Data\" />
