--- a/MonthlyStatement/Web.config
+++ b/MonthlyStatement/Web.config
@@ -21,6 +21,8 @@
     <add key="ida:TenantId" value="3011a54b-0a5d-4929-bf02-a00787877c6a" />
   </appSettings>
   <system.web>
+    <sessionState cookieSameSite="None">
+    </sessionState>
     <authentication mode="Forms">
       <forms loginUrl="~/Account/Login" timeout="2880" />
     </authentication>
